:bug: Prevent themes dropdown overflow hidden in set sidebar (#5850)

--- a/frontend/src/app/main/ui/workspace/tokens/theme_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/theme_select.scss
@@ -122,3 +122,7 @@
 .current-label {
   @include textEllipsis;
 }
+
+.dropdown-portal {
+  position: absolute;
+}
